Near completed UI. Add, del & check functionality working. Fixed load of event listeners to list items present on load up. Refactored label animation so majority in CSS code & outline now disappears first on shifting down.

--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ header h1 {
     position: relative;
     top: 27px;
     left: 8px;
+    animation-duration: 0.1s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
 }
 
 @keyframes shift_up {
@@ -59,6 +62,7 @@ header h1 {
 }
 
 #new_task {
+    color: var(--off-black--);
     border: 0;
     border-bottom: 2px solid var(--sec-color--);
     width: 100%;
